# best_deal

price-intel-discovery-git-ready/: Dockerfile  README.md  alembic.ini  pyproject.toml
price-intel-discovery-git-ready/alembic/: env.py  script.py.mako
price-intel-discovery-git-ready/alembic/versions/: 0001_init.py
price-intel-discovery-git-ready/fixtures/: demo_sunglass_a.html  demo_sunglass_b.html  demo_watch_a.html  demo_watch_b.html
price-intel-discovery-git-ready/src/: cli.py  settings.py
price-intel-discovery-git-ready/src/api/: app.py
price-intel-discovery-git-ready/src/connectors/: base.py  demo_sunglass_a.py  demo_sunglass_b.py  demo_watch_a.py  demo_watch_b.py  registry.py
price-intel-discovery-git-ready/src/core/: normalize.py  score.py  types.py
price-intel-discovery-git-ready/src/db/: models.py  session.py
price-intel-discovery-git-ready/src/discovery/: base.py  bing.py  demo.py  google_cse.py  registry.py
price-intel-discovery-git-ready/src/jobs/: discover_and_crawl.py  truth_crawl.py
price-intel-discovery-git-ready/src/product_types/: base.py  registry.py  sunglass.py  watch.py
price-intel-discovery-git-ready/src/services/: persist.py  query.py
price-intel-discovery-git-ready/tests/: test_discovery_demo.py
